--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,4 +1,4 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
+# This workflow will run tests using node and then publish a package to GitHub Packages and npm when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
 name: Publish npm package on Release
@@ -15,6 +15,17 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+
+      # Install protoc
+      - name: Install protoc
+        run: |
+          PROTOC_ZIP=protoc-22.2-linux-x86_64.zip
+          curl -OL https://github.com/protocolbuffers/protobuf/releases/download/v22.2/$PROTOC_ZIP
+          sudo unzip -o $PROTOC_ZIP -d /usr/local bin/protoc
+          sudo unzip -o $PROTOC_ZIP -d /usr/local 'include/*'
+          rm -f $PROTOC_ZIP
+          echo "protoc installed successfully"
+
       - run: npm ci
 
   publish-npm:
@@ -26,6 +37,17 @@ jobs:
         with:
           node-version: 20
           registry-url: https://registry.npmjs.org/
+
+      # Install protoc
+      - name: Install protoc
+        run: |
+          PROTOC_ZIP=protoc-22.2-linux-x86_64.zip
+          curl -OL https://github.com/protocolbuffers/protobuf/releases/download/v22.2/$PROTOC_ZIP
+          sudo unzip -o $PROTOC_ZIP -d /usr/local bin/protoc
+          sudo unzip -o $PROTOC_ZIP -d /usr/local 'include/*'
+          rm -f $PROTOC_ZIP
+          echo "protoc installed successfully"
+
       - run: npm ci
       - run: npm publish --access public
         env:
